Count ARIA radios properly

Do not count non-radio elements when computing radio setsize, posinset.

Bug: 624258
Change-Id: I8f3faf6a370493e2a02ebd86ad6a94a6f579588d